--- a/Sample.Hosted/wwwroot/lib/bootstrap/.vite/manifest.json
+++ b/Sample.Hosted/wwwroot/lib/bootstrap/.vite/manifest.json
@@ -6,7 +6,7 @@
     "isEntry": true
   },
   "buildwww/lib/bootstrap/bootstrap.scss": {
-    "file": "bootstrap.CoRWghH3r0cGbSow.css",
+    "file": "bootstrap.DzWjI4OC7jfY6x_f.css",
     "src": "buildwww/lib/bootstrap/bootstrap.scss",
     "isEntry": true,
     "name": "bootstrap",
