--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -8,9 +8,10 @@ on:
 jobs:
   Publish-Develop:
     permissions:
+      actions: read
+      contents: read
       security-events: write
       id-token: write
-      contents: read
       attestations: write
     runs-on: ubuntu-latest
     env:
@@ -18,7 +19,7 @@ jobs:
     timeout-minutes: 15
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
         with:
           fetch-depth: 0
 
@@ -53,7 +54,7 @@ jobs:
         with:
           subject-path: 'artifacts/packages/*.nupkg'
 
-      - uses: actions/upload-artifact@v5
+      - uses: actions/upload-artifact@v6
         with:
           name: packages
           path: artifacts/packages
