--- a/DRN.Test.Integration/DRN.Test.Integration.csproj
+++ b/DRN.Test.Integration/DRN.Test.Integration.csproj
@@ -43,6 +43,9 @@
         <None Update="Data\100.jpeg">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="xunit.runner.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
